--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+
+    <link rel="shortcut icon" href="%PUBLIC_URL%/logo.png" />
+    <meta name="description" content="Looking for a Digital Marketing Consultant for designing an SEO friendly Website and to publish it world wide with more number of insights call us at : +91 9551936390." />
+    <link rel="canonical" href="http://www.seotechie.tk/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="SEO Techie: Improve your Business using Digital Marketing" />
+    <meta property="og:description" content="Looking for a Digital Marketing Consultant for designing an SEO friendly Website and to publish it world wide with more number of insights call us at : +91 9551936390." />
+    <meta property="og:url" content="http://www.seotechie.tk/" />
+    <meta property="og:site_name" content="SEO Techie" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:description" content="Looking for a Digital Marketing Consultant for designing an SEO friendly Website and to publish it world wide with more number of insights call us at : +91 9551936390." />
+    <meta name="twitter:title" content="SEO Techie: Improve your Business using Digital Marketing" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
+    <link
+  rel="stylesheet"
+  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+  crossorigin="anonymous"
+/>
+<script src="https://unpkg.com/react/umd/react.production.js" crossorigin />
+  <script
+      src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
+      crossorigin
+    ></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>SEOTechie</title>
+   
   </head>
   <body style="background-color:#f4f4f4;">
     <noscript></noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    
   </body>
+  <script>var Alert = ReactBootstrap.Alert;</script>
 </html>
